# homework-31-validation-and-tests

./: .gitignore  README.md  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permission.py  serializers.py  urls.py  validators_ad.py  views.py
avito/: settings.py  urls.py
datasets/: convert.py
selection/: admin.py  models.py  permission.py  serializers.py  views.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  validators_user.py  views.py
